<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Moggle</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_qwork">QWorkActivity</string>
    <string name="title_activity_qmood">QMoodActivity</string>
    <string name="title_activity_data_vis">DataVisActivity</string>
    <string name="work_rating_good">Good</string>
    <string name="work_rating_avg">Average</string>
    <string name="work_rating_poor">Poor</string>
    <string name="work_length_question">How many hours did you work today?</string>
    <string name="work_length_range">(0&#8211;24)</string>
	<string name="work_quality_question">Estimate the your work quality!</string>
	<string name="button_txt_finish">Finish</string>
    <string name="mood_question">Rate your mood!</string>
    
    <string name="display_txt">Select a radio button!</string>
	
</resources>