<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QWorkActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:onClick="openQMood"
        android:text="@string/title_activity_qmood" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:text="@string/work_quality_question"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginBottom="17dp" >

        <RadioButton
            android:id="@+id/radio_work_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/work_rating_good"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_work_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_rating_avg"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_work_poor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_rating_poor"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginTop="22dp"
        android:text="@string/work_length_question"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignLeft="@+id/button1"
        android:text="@string/work_length_range" />
    
</RelativeLayout>